fixed z-index issues on add deployment screen

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 	width: 100%;
 	background-color: white;
-	z-index: 10;
+	z-index: 100;
 	position: relative;
 }
 .branding {
