--- a/src/scss/components/_toolbar.scss
+++ b/src/scss/components/_toolbar.scss
@@ -4,7 +4,7 @@
 	width: 100%;
 	box-sizing: border-box;
 	padding: 1rem;
-	z-index: 1;
+	z-index: 20;
 	border-top: 1px solid $off-white;
 
 	label {
@@ -54,7 +54,7 @@
 		box-sizing: border-box;
 		border: none;
 		width: 100%;
-		min-height: 71vh;
+		height: 71vh;
 		margin-bottom: 1rem;
 	}
 	
@@ -76,8 +76,7 @@
 
 .toolbar.expanded {
 	.add-artefact-box {
-		min-height: 92vh;
-		height: auto;
+		height: 92vh;
 		opacity: 1;		
 	}
 	.filtering-tools-box {
